# open_manipulator_ign

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch  open_manipulator_controller.launch  open_manipulator_ign.launch
models/openManipulator/: model.config  open_manipulator.sdf  open_manipulator_on_world.sdf
rviz/: open_manipulator.rviz
worlds/: openManipulator.world  open_manipulator.urdf  open_manipulator.urdf.xacro
worlds/openManipulator/: open_manipulator.sdf  open_manipulator.urdf  open_manipulator.urdf.xacro  open_manipulator2.sdf  open_manipulator_on_world.sdf
